syntax = "proto3";
import "google/protobuf/timestamp.proto"; // 引入 Timestamp

option csharp_namespace = "GrpcServiceClient";


service GrpcDllService{
  rpc GrpcExecuteDllMethod(MethodRequest) returns (MethodResponse);
}

message MethodRequest{
  string directoryPath=1;
  string dllPath=2;
  string typeName = 3;
  string methodName = 4;
  repeated string parameters = 5; // JSON 格式的參數 序列化
}


message MethodResponse {
  string result = 1;
  google.protobuf.Timestamp timestamp = 2; // 使用 Timestamp 類型
}
